update: correção do crud de status